# checksum64

./: .gitignore  CMakeLists.txt  README.md
src/: argument_parser.cpp  bin2hex.cpp  ch64sum.cpp  log.cpp
src/include/: argument_parser.h  bin2hex.h  log.hpp
